@@ -45,6 +45,7 @@ Bugs fixed:
 - 1618216 Fixed method parameter and returnvalue processing
 - 1618258 Fixed slp problems when ssl is enabled
 - 1616130 Fixed bad message during shutdown
+- 1620005 Fixed unnecessary fork when slp is enabled
 
 Changes in 1.1.1
 ================
