@@ -1,3 +1,8 @@
+2006-12-21  Sven Schuetz
+
+	* cimslp.h, cimslp.c, sfcBroker.c:
+	Fixed 1620005: unnecessary fork when slp is enabled
+
 2006-12-19  Adrian Schuur
 
 	* msgqueue.c: 
